--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,10 @@ button:focus,
         }
     }
 
+.other-skills {
+    margin-top: 20px;
+}
+
 /*-------------------
  * Portfolio
  *-------------------*/
