--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
     font-family: 'Noto Sans JP', sans-serif;
 }
 
+html {
+    min-height: 100%;
+}
+
 body {
-    background-color: rgb(39, 39, 39);
+    background-image: repeating-linear-gradient(0deg, rgba(166, 166, 166, 0.08) 0px, rgba(166, 166, 166, 0.08) 1px, transparent 1px, transparent 11px), repeating-linear-gradient(90deg, rgba(166, 166, 166, 0.08) 0px, rgba(166, 166, 166, 0.08) 1px, transparent 1px, transparent 11px), linear-gradient(90deg, #141414, #141414);
     color: white;
     font-size: 30pt;
 }
